// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toast Toast base demo works fine 1`] = `
<base>
  <t-toast
    id="t-toast"
  />
  <wx-view
    class="box"
  >
    <t-button
      block="{{true}}"
      size="large"
      theme="primary"
      variant="outline"
      bind:tap="showText"
    >
      纯文本
    </t-button>
    <t-button
      block="{{true}}"
      size="large"
      theme="primary"
      variant="outline"
      bind:tap="showMultiText"
    >
      多行文字
    </t-button>
    <t-button
      block="{{true}}"
      size="large"
      theme="primary"
      variant="outline"
      bind:tap="showHorizontalText"
    >
      带横向图标
    </t-button>
    <t-button
      block="{{true}}"
      size="large"
      theme="primary"
      variant="outline"
      bind:tap="showVerticalText"
    >
      带竖向图标
    </t-button>
    <t-button
      block="{{true}}"
      size="large"
      theme="primary"
      variant="outline"
      bind:tap="showLoading"
    >
      加载状态
    </t-button>
  </wx-view>
</base>
`;

exports[`Toast Toast close demo works fine 1`] = `
<close>
  <t-toast
    id="t-toast"
  />
  <wx-view
    class="box"
  >
    <wx-view
      class="toast-example"
    >
      <t-button
        size="large"
        theme="primary"
        variant="outline"
        bind:tap="handleShow"
      >
        显示提示
      </t-button>
      <t-button
        size="large"
        theme="primary"
        variant="outline"
        bind:tap="handleHide"
      >
        关闭提示
      </t-button>
    </wx-view>
  </wx-view>
</close>
`;

exports[`Toast Toast cover demo works fine 1`] = `
<cover>
  <t-toast
    id="t-toast"
  />
  <wx-view
    class="box"
  >
    <t-button
      block="{{true}}"
      size="large"
      theme="primary"
      variant="outline"
      bind:tap="handleToast"
    >
      禁止滑动和点击
    </t-button>
  </wx-view>
</cover>
`;

exports[`Toast Toast theme demo works fine 1`] = `
<theme>
  <t-toast
    id="t-toast"
  />
  <wx-view
    class="box"
  >
    <t-button
      block="{{true}}"
      size="large"
      theme="primary"
      variant="outline"
      bind:tap="showSuccessToast"
    >
      成功提示
    </t-button>
    <t-button
      block="{{true}}"
      size="large"
      theme="primary"
      variant="outline"
      bind:tap="showWarningToast"
    >
      警告提示
    </t-button>
    <t-button
      block="{{true}}"
      size="large"
      theme="primary"
      variant="outline"
      bind:tap="showErrorToast"
    >
      错误提示
    </t-button>
  </wx-view>
</theme>
`;
